implement mechanism to set color scheme

--- a/src/igz_controls/components/action-menu/action-menu.less
+++ b/src/igz_controls/components/action-menu/action-menu.less
@@ -61,7 +61,7 @@
             }
 
             &.inactive {
-                color: @icon-color-base;
+                color: @bismark;
                 pointer-events: none;
             }
 
