--- a/src/igz_controls/components/default-dropdown/default-dropdown.less
+++ b/src/igz_controls/components/default-dropdown/default-dropdown.less
@@ -215,7 +215,7 @@
 
             .add-button {
                 font-family: @font-family-sans-serif;
-                color: #00c9ff;
+                color: @bright-turquoise;
                 font-size: 13px;
                 font-weight: 400;
                 line-height: 20px;
@@ -225,7 +225,7 @@
                 }
 
                 &:focus {
-                    color: #00c9ff;
+                    color: @bright-turquoise;
                 }
             }
         }
