--- a/src/igz_controls/components/search-input/search-input.less
+++ b/src/igz_controls/components/search-input/search-input.less
@@ -103,7 +103,7 @@
     }
 
     .igz-icon-search {
-        color: #00c9ff;
+        color: @bright-turquoise;
         font-size: 16px;
         height: 16px;
         position: absolute;
