--- a/src/igz_controls/less/buttons.less
+++ b/src/igz_controls/less/buttons.less
@@ -183,7 +183,7 @@
     padding: 0;
     width: 38px;
     background-color: #ffffff;
-    color: #4b6c8b;
+    color: @bismark;
     border: 1px solid #d7d7d7;
 
     &:active {
