--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -176,7 +176,7 @@
 
                     .href-link {
                         font-family: @font-family-sans-serif;
-                        color: #00c9ff;
+                        color: @bright-turquoise;
                         font-size: 14px;
                         font-weight: 400;
                         line-height: 16px;
