--- a/src/igz_controls/less/general-rules.less
+++ b/src/igz_controls/less/general-rules.less
@@ -54,7 +54,7 @@ body {
 
     &.login, &.forgot-password, &.reset-password {
         .container-fluid {
-            background: #e7edf0;
+            background: @mystic;
         }
     }
 }
