--- a/src/igz_controls/less/tooltips.less
+++ b/src/igz_controls/less/tooltips.less
@@ -46,7 +46,7 @@
             color: @tooltip-value-primary-color;
 
             .tooltip-value-highlighted {
-                color: @tooltip-label-primary-color;
+                color: @perano;
             }
         }
 
