--- a/src/igz_controls/components/info-page/info-page-filters/info-page-filters.less
+++ b/src/igz_controls/components/info-page/info-page-filters/info-page-filters.less
@@ -3,7 +3,7 @@
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
-    color: #4b6c8b;
+    color: @bismark;
     cursor: pointer;
     font-size: 10px;
     height: 22px;
