--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -343,22 +343,26 @@
 }
 
 .igz-icon-priority-realtime {
-    color: @darkish-pink;
+    .descriptive-icons-color-set();
+    color: @icon-priority-realtime;
     .generateIconClass(946);
 }
 
 .igz-icon-priority-high {
-    color: #f97c53;
+    .descriptive-icons-color-set();
+    color: @icon-priority-high;
     .generateIconClass(947);
 }
 
 .igz-icon-priority-standard {
-    color: @sunflower-yellow;
+    .descriptive-icons-color-set();
+    color: @icon-priority-standard;
     .generateIconClass(948);
 }
 
 .igz-icon-priority-low {
-    color: @cloudy-blue;
+    .descriptive-icons-color-set();
+    color: @icon-priority-low;
     .generateIconClass(949);
 }
 
