--- a/src/igz_controls/less/table.less
+++ b/src/igz_controls/less/table.less
@@ -280,7 +280,9 @@
                 border-left-color: transparent;
 
                 .column-block .common-table-icon:before {
-                    color: @silver;
+                    .descriptive-icons-color-set();
+
+                    color: @icon-default-color;
                 }
 
                 // Cell with justified horizontal blocks cell
