--- a/src/igz_controls/components/number-input/number-input.less
+++ b/src/igz_controls/components/number-input/number-input.less
@@ -1,14 +1,16 @@
 .igz-number-input {
+    .number-input-color-set();
+
     min-width: 115px;
     font-family: @font-family-sans-serif;
     font-size: 14px;
     font-weight: 400;
     height: 36px;
     position: relative;
-    background-color: @white;
-    border: solid 1px @pale-grey;
+    background-color: @number-input-bg-color;
+    border: solid 1px @number-input-border-color;
     border-radius: 2px;
-    color: @dusk-three;
+    color: @number-input-color;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -17,25 +19,25 @@
 
     &:not(.disabled) {
         &:focus.ng-invalid:not(.ng-pristine), &.ng-invalid.ng-touched {
-            background-color: #fbe5e8;
-            border: solid 1px @darkish-pink;
+            background-color: @number-input-not-disabled-focus-invalid-bg-color;
+            border: solid 1px @number-input-not-disabled-focus-invalid-border-color;
             box-shadow: none;
             outline: none;
         }
 
         &:hover, &:focus {
             outline: 0;
-            border: solid 1px @dark-sky-blue;
+            border: solid 1px @number-input-not-disabled-hover-focus-border-color;
         }
 
         &.invalid:not(.pristine), &.invalid.submitted {
-            background-color: #fbe5e8;
-            border: solid 1px @darkish-pink;
+            background-color: @number-input-not-disabled-invalid-bg-color;
+            border: solid 1px @number-input-not-disabled-invalid-border-color;
             box-shadow: none;
         }
 
         &:focus.ng-valid, &:focus.ng-pristine {
-            border: solid 1px @dark-sky-blue;
+            border: solid 1px @number-input-not-disabled-valid-border-color;
             box-shadow: none;
             outline: none;
         }
@@ -56,7 +58,7 @@
 
     .additional-left-block {
         .prefix-unit {
-            color: @dusk-three;
+            color: @number-input-additional-left-block-prefix-unit-color;
             font-size: 14px;
             font-weight: 700;
             padding-right: 7px;
@@ -64,7 +66,7 @@
     }
 
     .suffix-unit {
-        color: @dusk-three;
+        color: @number-input-suffix-unit-color;
         font-size: 14px;
         font-weight: 400;
         padding-left: 3px;
@@ -81,20 +83,19 @@
         top: 1px;
 
         .igz-icon-dropup, .igz-icon-dropdown {
-            .duskThree(0.54);
-            color: @color;
+            color: @number-input-arrow-block-icon-color;
             cursor: pointer;
             display: block;
             line-height: 11px;
 
             &:hover {
-                color: @dusk-three;
+                color: @number-input-arrow-block-icon-hover-color;
             }
         }
     }
 
     &.disabled {
-        background-color: white;
+        background-color: @number-input-disabled-bg-color;
         opacity: 0.5;
 
         .suffix-unit {
@@ -103,8 +104,7 @@
 
         .igz-icon-dropup, .igz-icon-dropdown {
             &, &:hover {
-                .duskThree(0.54);
-                color: @color;
+                color: @number-input-disabled-icon-hover-color;
                 opacity: 0.5;
                 cursor: default;
             }
