Andrii's changes regarding to Equinix

--- a/src/igz_controls/components/action-checkbox-all/action-checkbox-all.less
+++ b/src/igz_controls/components/action-checkbox-all/action-checkbox-all.less
@@ -3,7 +3,7 @@
 
     .check-item {
         cursor: pointer;
-        color: @checkbox-unchecked;
+        color: @mountain-mist;
         font-size: 16px;
         line-height: 1;
         vertical-align: middle;
