--- a/src/igz_controls/components/action-checkbox/action-checkbox.less
+++ b/src/igz_controls/components/action-checkbox/action-checkbox.less
@@ -9,7 +9,7 @@
         vertical-align: middle;
 
         &.igz-icon-checkbox-unchecked {
-            color: @checkbox-unchecked;
+            color: @mountain-mist;
         }
 
         &.igz-icon-checkbox-checked {
