--- a/src/igz_controls/less/inputs.less
+++ b/src/igz_controls/less/inputs.less
@@ -29,7 +29,7 @@ input[type=checkbox] {
 
         &:before {
             content: "\e92e";
-            color: @checkbox-unchecked;
+            color: @mountain-mist;
             font-family: 'iguazio';
             padding: 0;
             height: 16px;
@@ -52,7 +52,7 @@ input[type=checkbox] {
 
         &:before {
             content: "\e92e";
-            color: @checkbox-unchecked;
+            color: @mountain-mist;
         }
     }
 
@@ -65,7 +65,7 @@ input[type=checkbox] {
     // Checked - disabled
     &:checked:disabled + label:before {
         content: "\e92f";
-        color: @checkbox-unchecked;
+        color: @mountain-mist;
     }
 }
 
