add new less variable

--- a/src/igz_controls/components/info-page/info-page-content/info-page-content.less
+++ b/src/igz_controls/components/info-page/info-page-content/info-page-content.less
@@ -20,10 +20,12 @@
     }
 
     .igz-info-page-content {
+        .info-page-content-color-set();
+
         min-width: 946px;
         max-width: 100%;
         padding: 40px 25px;
-        background-color: @pale-white;
+        background-color: @page-content-bg-color;
     }
 }
 
