add new less variable

--- a/src/igz_controls/less/buttons.less
+++ b/src/igz_controls/less/buttons.less
@@ -61,14 +61,14 @@
     border: solid 1px @primary-btn-border-color;
 
     &:hover {
-        background-color: @bluish;
+        background-color: @primary-btn-hover-bg-color;
         box-shadow: @primary-btn-hover-box-shadow;
         border: none;
         padding: 9px 21px;
     }
 
     &:active {
-        background-color: @bluish;
+        background-color: @primary-btn-active-bg-color;
         box-shadow: @primary-btn-active-box-shadow;
         border: none;
         outline: none;
