--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -285,7 +285,7 @@
                     text-transform: uppercase;
 
                     &:hover {
-                        background-color: @bluish;
+                        background-color: @oops-dialog-refresh-button-hover-bg-color;
                         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
                     }
 
