Lev's question mark changes

--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -125,6 +125,11 @@
                     }
 
                     &:hover {
+                        &:before {
+                            color: @icon-help-hover-before-color !important;
+                            background-color: @icon-help-hover-before-bg-color !important;
+                        }
+
                         + div {
                             display: block;
                         }
