--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.less
@@ -16,7 +16,7 @@
                 .input-label {
                     font-size: 14px;
                     font-weight: 600;
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                 }
 
                 igz-validating-input-field {
@@ -32,7 +32,7 @@
         .title {
             font-size: 16px;
             font-weight: bold;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
         }
 
         .templates-controls {
@@ -50,7 +50,7 @@
                 margin-right: 20px;
 
                 .search-icon {
-                    color: @ncl-greyish-purple;
+                    color: @greyish-purple;
                     font-size: 18px;
                     position: absolute;
                     left: 8px;
@@ -61,14 +61,14 @@
                     width: 100%;
                     border: none;
                     background-color: transparent;
-                    color: @ncl-greyish-purple;
-                    border-bottom: 1px solid @ncl-greyish-purple;
+                    color: @greyish-purple;
+                    border-bottom: 1px solid @greyish-purple;
                     padding: 3px 0 9px 32px;
 
                     &:focus {
                         outline: none;
-                        color: @ncl-dusk-three;
-                        border-bottom: 1px solid @ncl-light-blue-two;
+                        color: @dusk-three;
+                        border-bottom: 1px solid @light-blue-two;
                     }
                 }
             }
@@ -79,12 +79,12 @@
                 .input-label {
                     font-size: 14px;
                     font-weight: 600;
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                 }
 
                 igz-default-dropdown {
                     .default-dropdown {
-                        background-color: @ncl-white;
+                        background-color: @white;
 
                         .default-dropdown-field {
                             &:focus {
@@ -104,7 +104,7 @@
                 .title {
                     font-size: 13px;
                     font-weight: normal;
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                 }
 
                 .igz-pagination {
@@ -122,7 +122,7 @@
             .function-template-wrapper {
                 width: 400px;
                 height: 268px;
-                background-color: @ncl-white;
+                background-color: @white;
                 box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
                 border-radius: 2px;
                 padding: 26px 34px 23px 23px;
@@ -130,9 +130,9 @@
                 position: relative;
 
                 &.selected {
-                    border: 2px solid @ncl-blue;
+                    border: 2px solid @dark-sky-blue;
                     box-shadow: inherit;
-                    background-color: @ncl-light-blue-three;
+                    background-color: @light-blue-three;
 
                     &:before {
                         content: '\e965';
@@ -141,7 +141,7 @@
                         position: absolute;
                         top: 0;
                         left: 86px;
-                        color: @ncl-light-grey-two;
+                        color: @light-grey-two;
                         height: 100%;
                         display: flex;
                         align-items: center;
@@ -155,17 +155,17 @@
                     position: absolute;
                     top: 0;
                     right: 0;
-                    background-color: @ncl-blue;
+                    background-color: @dark-sky-blue;
                     border-bottom-left-radius: 4px;
 
                     .igz-icon-add {
-                        color: @ncl-white;
+                        color: @white;
                         font-size: 10px;
                     }
 
                     &.disabled {
-                        background-color: @ncl-pale-grey;
-                        border: solid 1px @ncl-pale-grey;
+                        background-color: @pale-grey;
+                        border: solid 1px @pale-grey;
                         box-shadow: none;
                         cursor: default;
                     }
@@ -178,7 +178,7 @@
 
                     &:active {
                         &:not(.disabled) {
-                            background-color: @ncl-bluish;
+                            background-color: @bluish;
                             box-shadow: inset 0.4px 1.9px 3px 0 rgba(0, 0, 0, 0.2);
                             border: none;
                             outline: none;
@@ -191,7 +191,7 @@
                     width: 343px;
 
                     .template-title {
-                        color: @ncl-light-blue-two;
+                        color: @light-blue-two;
                         font-size: 19px;
                         font-weight: bold;
                         width: 100%;
@@ -199,7 +199,7 @@
                     }
 
                     .template-description {
-                        color: @ncl-dusk-three;
+                        color: @dusk-three;
                         font-size: 15px;
                         width: 100%;
                         margin-bottom: 52px;
