--- a/src/nuclio/common/less/general-rules.less
+++ b/src/nuclio/common/less/general-rules.less
@@ -8,7 +8,7 @@ body {
     .nuclio-validating-input {
         .validating-input-field .input-field, .validating-input-field .textarea-field {
             &:not([disabled]):not([readonly]):not(:focus):hover {
-                border: solid 1px @ncl-pale-grey;
+                border: solid 1px @pale-grey;
             }
         }
     }
