--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -1,19 +1,19 @@
 .test-events-pane {
     width: 650px;
     height: 100%;
-    border: 1px solid @ncl-pale-grey;
-    border-left: 2px solid @ncl-pale-grey;
+    border: 1px solid @pale-grey;
+    border-left: 2px solid @pale-grey;
     border-top: none;
     position: relative;
-    background-color: @ncl-white;
+    background-color: @white;
 
     .ncl-secondary-button {
-        background-color: @ncl-pale-grey;
-        color: @ncl-dusk-three;
+        background-color: @pale-grey;
+        color: @dusk-three;
 
         &.disabled {
-            .nclDuskThree(0.24);
-            background-color: @ncl-pale-grey-three;
+            .duskThree(0.24);
+            background-color: @pale-grey-three;
             color: @color;
         }
     }
@@ -36,7 +36,7 @@
         .left-bar {
             box-shadow: none;
             border: none;
-            border-right: solid 1px @ncl-pale-grey;
+            border-right: solid 1px @pale-grey;
             display: none;
             transition: none;
 
@@ -105,15 +105,15 @@
     }
 
     .left-bar {
-        .nclBlack(0.1);
+        .black(0.1);
         position: absolute;
         z-index: 5;
         height: 100%;
         width: 187px;
-        background-color: @ncl-white;
-        color: @ncl-dusk-three;
+        background-color: @white;
+        color: @dusk-three;
         box-shadow: 2.5px 1.6px 6px 0 @color;
-        border: solid 1px @ncl-pale-grey;
+        border: solid 1px @pale-grey;
         border-top: none;
         border-bottom: none;
 
@@ -129,7 +129,7 @@
                 padding-right: 27px;
 
                 &:hover {
-                    background-color: @ncl-light-grayish-blue;
+                    background-color: @light-grayish-blue;
 
                     .igz-icon-close {
                         visibility: visible;
@@ -137,7 +137,7 @@
                 }
 
                 .igz-icon-close {
-                    .nclDuskThree(0.64);
+                    .duskThree(0.64);
                     position: absolute;
                     top: 1px;
                     right: 9px;
@@ -154,7 +154,7 @@
             height: 16px;
             line-height: 17px;
             text-align: center;
-            color: @ncl-white;
+            color: @white;
             border-radius: 3px;
             margin: 0 8px 0 10px;
             font-size: 11px;
@@ -166,11 +166,11 @@
             align-items: center;
             font-size: 16px;
             font-weight: bold;
-            color: @ncl-dusk-three;
+            color: @dusk-three;
             height: 39px;
 
             .igz-icon-close {
-                .nclDuskThree(0.64);
+                .duskThree(0.64);
                 color: @color;
                 font-size: 12px;
                 margin: 0 9px 0 12px;
@@ -180,17 +180,17 @@
                 position: absolute;
                 top: 12px;
                 right: 12px;
-                color: @ncl-greyish-purple;
+                color: @greyish-purple;
                 font-size: 16px;
             }
         }
 
         .ncl-test-events-navigation-tabs {
-            background-color: @ncl-white;
+            background-color: @white;
 
             .test-events-navigation-tab {
                 padding: 10px 22px 0;
-                background-color: @ncl-white;
+                background-color: @white;
             }
         }
     }
@@ -206,8 +206,8 @@
         justify-content: space-between;
         align-items: center;
         height: 40px;
-        border-bottom: 1px solid @ncl-pale-grey;
-        background-color: @ncl-white;
+        border-bottom: 1px solid @pale-grey;
+        background-color: @white;
         padding: 0 24px 0 12px;
 
         .left-side-elements {
@@ -215,7 +215,7 @@
             align-items: center;
 
             .igz-icon-hamburger-menu {
-                color: @ncl-dusk-three;
+                color: @dusk-three;
                 margin-right: 4px;
                 font-size: 12px;
             }
@@ -237,7 +237,7 @@
                     }
 
                     &.elastic-input-invalid input {
-                        border: solid 1px @ncl-darkish-pink;
+                        border: solid 1px @darkish-pink;
                     }
                 }
             }
@@ -250,8 +250,8 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                background-color: @ncl-pale-grey-two;
-                border: 1px solid @ncl-pale-grey;
+                background-color: @pale-grey-two;
+                border: 1px solid @pale-grey;
                 height: 32px;
                 width: 32px;
                 margin-right: 10px;
@@ -278,14 +278,14 @@
     .request-method {
         display: flex;
         align-items: center;
-        background-color: @ncl-pale-grey-three;
+        background-color: @pale-grey-three;
         height: 38px;
         padding: 0 23px;
 
         .path {
             display: flex;
             align-items: center;
-            color: @ncl-grey;
+            color: @cool-grey;
             font-weight: bold;
             margin-left: 22px;
         }
@@ -305,7 +305,7 @@
             .input-field {
                 padding: 0 1px;
                 border-color: transparent;
-                background-color: @ncl-pale-grey-three;
+                background-color: @pale-grey-three;
             }
         }
     }
@@ -315,8 +315,8 @@
             display: flex;
             align-items: center;
             height: 40px;
-            background-color: @ncl-white;
-            border-bottom: 1px solid @ncl-pale-grey;
+            background-color: @white;
+            border-bottom: 1px solid @pale-grey;
             padding: 0 24px;
 
             .default-dropdown {
@@ -334,7 +334,7 @@
                 padding: 8px;
 
                 &.uploaded {
-                    background-color: @ncl-white;
+                    background-color: @white;
                 }
 
                 .drop-section {
@@ -343,8 +343,8 @@
                     justify-content: center;
                     height: 100%;
                     width: 100%;
-                    border: 2px dashed @ncl-silver;
-                    color: @ncl-silver;
+                    border: 2px dashed @silver;
+                    color: @silver;
                     font-size: 16px;
                     font-weight: bold;
 
@@ -358,7 +358,7 @@
                         text-align: center;
 
                         .ncl-icon-drop-file {
-                            color: @ncl-silver;
+                            color: @silver;
                             font-size: 40px;
                             height: 50px;
                         }
@@ -374,12 +374,12 @@
                                 overflow: hidden;
                                 height: 4px;
                                 width: 205px;
-                                background-color: @ncl-pale-grey;
+                                background-color: @pale-grey;
                                 border-radius: 2px;
                                 margin: 9px auto 14px;
 
                                 .progress-bar {
-                                    background-color: @ncl-dark-sky-blue;
+                                    background-color: @dark-sky-blue;
                                 }
                             }
                         }
@@ -389,7 +389,7 @@
                         }
 
                         .browse {
-                            color: @ncl-dark-sky-blue;
+                            color: @dark-sky-blue;
                             cursor: pointer;
                         }
 
@@ -399,11 +399,11 @@
 
                         .file-name, .file {
                             font-weight: normal;
-                            color: @ncl-dusk-three;
+                            color: @dusk-three;
                             font-size: 14px;
 
                             .size {
-                                color: @ncl-dark-greyish-blue;
+                                color: @dark-greyish-blue;
                             }
                         }
 
@@ -414,13 +414,13 @@
                             margin: 25px 0 0 41px;
                             width: 344px;
                             height: 32px;
-                            background-color: @ncl-light-grayish-blue;
-                            border: solid 1px @ncl-pale-grey;
+                            background-color: @light-grayish-blue;
+                            border: solid 1px @pale-grey;
 
                             .ncl-icon-file {
                                 font-size: 20px;
                                 margin: 0 9px 0 11px;
-                                color: @ncl-greyish-purple;
+                                color: @greyish-purple;
                             }
 
                             .name {
@@ -432,7 +432,7 @@
 
                             .igz-icon-close {
                                 position: absolute;
-                                color: @ncl-dusk-three;
+                                color: @dusk-three;
                                 right: 9px;
                                 top: 9px;
                                 font-size: 10px;
@@ -461,7 +461,7 @@
         }
 
         .headers {
-            background-color: @ncl-white;
+            background-color: @white;
             padding: 22px 17px;
 
             .create-header-button {
@@ -477,7 +477,7 @@
             }
 
             .table-body-wrapper {
-                border-left: 2px solid @ncl-pale-grey;
+                border-left: 2px solid @pale-grey;
 
                 &.scrollable-headers {
                     max-height: 185px;
@@ -488,7 +488,7 @@
                 margin-bottom: 0;
 
                 .ncl-key-value-input {
-                    border: 1px solid @ncl-pale-grey;
+                    border: 1px solid @pale-grey;
                     border-left: none;
                     border-bottom: none;
 
@@ -509,21 +509,21 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: @ncl-pale-grey-three;
-            border-top: 1px solid @ncl-pale-grey;
+            background-color: @pale-grey-three;
+            border-top: 1px solid @pale-grey;
             height: 39px;
 
             .left-side-elements {
                 font-size: 16px;
                 font-weight: bold;
-                color: @ncl-dusk-three;
+                color: @dusk-three;
                 margin-left: 40px;
             }
 
             .right-side-elements {
                 display: flex;
                 font-size: 14px;
-                color: @ncl-dusk-three;
+                color: @dusk-three;
 
                 .status {
                     display: inline-block;
@@ -533,7 +533,7 @@
                     margin-left: 4px;
 
                     &.success {
-                        color: @ncl-green-aquamarine;
+                        color: @tealish;
                     }
 
                     &.fail {
@@ -548,7 +548,7 @@
                         margin-left: 4px;
 
                         &.time, &.size {
-                            color: @ncl-dark-sky-blue;
+                            color: @dark-sky-blue;
                         }
                     }
                 }
@@ -557,7 +557,7 @@
 
         .body {
             display: flex;
-            background-color: @ncl-white;
+            background-color: @white;
             align-items: flex-start;
             justify-content: center;
 
@@ -572,7 +572,7 @@
                     margin-right: 18px;
 
                     > div {
-                        .nclDuskThree(0.64);
+                        .duskThree(0.64);
                         height: 40px;
                         width: 40px;
                         border-radius: 50%;
@@ -590,10 +590,10 @@
                         }
 
                         &:hover {
-                            .nclBlack(0.13);
-                            background-color: @ncl-pale-grey;
+                            .black(0.13);
+                            background-color: @pale-grey;
                             box-shadow: 0.8px 0.5px 3px 0 @color;
-                            color: @ncl-dusk-three;
+                            color: @dusk-three;
                         }
                     }
                 }
@@ -627,7 +627,7 @@
             .no-content-section {
                 margin: 10px auto;
                 font-size: 14px;
-                color: @ncl-pale-grey;
+                color: @pale-grey;
                 text-align: center;
             }
 
@@ -635,7 +635,7 @@
                 margin: 80px 0;
                 text-align: center;
                 font-size: 14px;
-                color: @ncl-greyish-purple;
+                color: @greyish-purple;
 
                 .loader-wrapper {
                     margin: 20px 0;
@@ -648,7 +648,7 @@
 
                 .circle {
                     position: relative;
-                    background-color: @ncl-pale-grey-two;
+                    background-color: @pale-grey-two;
                     height: 130px;
                     width: 130px;
                     border-radius: 50%;
@@ -658,7 +658,7 @@
                         position: absolute;
                         top: 12px;
                         left: 31px;
-                        color: @ncl-dark-sky-blue;
+                        color: @dark-sky-blue;
                         font-size: 43px;
                     }
 
@@ -666,7 +666,7 @@
                         position: absolute;
                         top: 47px;
                         left: 42px;
-                        .nclGreyishPurple(0.64);
+                        .greyishPurple(0.64);
                         color: @color;
                         font-size: 58px;
                     }
@@ -676,7 +676,7 @@
                     margin-top: 14px;
                     width: 245px;
                     font-size: 16px;
-                    color: @ncl-greyish-purple;
+                    color: @greyish-purple;
                     line-height: 1.5;
                 }
             }
@@ -690,13 +690,13 @@
                 line-height: 2;
 
                 .labels {
-                    color: @ncl-greyish-purple;
+                    color: @greyish-purple;
                     font-size: 14px;
                     width: 43%;
                 }
 
                 .values {
-                    color: @ncl-dusk-three;
+                    color: @dusk-three;
                     font-size: 14px;
                     width: 57%;
                 }
