fixed issue with monaco content changes

--- a/src/nuclio/common/components/monaco/monaco.tpl.html
+++ b/src/nuclio/common/components/monaco/monaco.tpl.html
@@ -8,6 +8,7 @@
              data-mini-monaco="$ctrl.miniMonaco"
              data-show-line-numbers="$ctrl.showLineNumbers"
              data-read-only="$ctrl.readOnly"
+             data-on-code-change="$ctrl.onCodeChange"
              data-word-wrap="$ctrl.wordWrap"></div>
     </div>
 </div>
